# redis-client

./: CHANGELOG.md  README.md  redis-client.cabal
app/: Main.hs
src/: MyLib.hs  Parser.hs
test/: OtherTest.hs  ParserTest.hs
