cabal-version:      2.4
name:               redis-client
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: "redis client"

-- A longer description of the package.
description: "redis client"

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license: MIT

-- The package author(s).
author: ["aidanSoles <aidan.soles@gmail.com>", "bnert <brent@soles.dev>"]

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable redis-client
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
      MyLib
      

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:
      app
      src
    default-language: Haskell2010
    ghc-options:
      -fllvm
