cabal-version:      2.4
name:               redis-client
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: "redis client"

-- A longer description of the package.
description: "redis client"

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license: MIT

-- The package author(s).
author: ["aidanSoles <aidan.soles@gmail.com>", "bnert <brent@soles.dev>"]

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

-- Keeping for now, so we have a reference as to how to add an executable
-- to the project.
--
-- executable redis-client
--     main-is:          Main.hs
--     default-language: Haskell2010
--     hs-source-dirs:   app src
--     build-depends:    base ^>=4.14.3.0
--     ghc-options:      -fllvm
-- 
--     -- Modules included in this executable, other than Main.
--     other-modules:
--       MyLib
--       Parser
-- 
--     -- LANGUAGE extensions used by modules in this package.
--     -- other-extensions:

library
    default-language: Haskell2010
    hs-source-dirs:   src
    exposed-modules:
      Parser
    build-depends:    base ^>=4.14.3.0

Test-Suite parser
    type:             exitcode-stdio-1.0
    default-language: Haskell2010
    hs-source-dirs:   test
    main-is:          ParserTest.hs
    build-depends: base ^>=4.14.3.0
                   , Cabal
                   , tasty
                   , tasty-hunit
                   , redis-client

Test-Suite other
    type:             exitcode-stdio-1.0
    default-language: Haskell2010
    hs-source-dirs:   test
    main-is:          OtherTest.hs
    build-depends: base ^>=4.14.3.0
                   , Cabal
                   , tasty
                   , tasty-hunit
                   , redis-client

